# Eskapade

./: .gitignore  Jenkinsfile  MANIFEST.in  Makefile  NOTICE  README.rst  requirements.txt  setup.py  setup.sh  setup_cxx.py  tox.ini
config/spark/: spark.cfg
cxx/esroofit/: CMakeLists.txt
cxx/esroofit/cmake/: Common.cmake
cxx/esroofit/dict/esroofit/: LinkDef.h
cxx/esroofit/include/esroofit/: ABCDUtils.h  DataUtils.h  DrawUtils.h  RhhNDKeysPdf.h  RooABCDHistPdf.h  RooComplementCoef.h  RooExpandedFitResult.h  RooNonCentralBinning.h  RooParamHistPdf.h  RooTruncExponential.h  RooWeibull.h  Statistics.h  TMsgLogger.h
cxx/esroofit/src/: ABCDUtils.cxx  DataUtils.cxx  DrawUtils.cxx  RhhNDKeysPdf.cxx  RooABCDHistPdf.cxx  RooComplementCoef.cxx  RooExpandedFitResult.cxx  RooNonCentralBinning.cxx  RooParamHistPdf.cxx  RooTruncExponential.cxx  RooWeibull.cxx  Statistics.cxx  TMsgLogger.cxx
cxx/roofit/: roofit.mk
cxx/roofit/dict/: LinkDef.h
cxx/roofit/include/: ABCDUtils.h  DataUtils.h  DrawUtils.h  RooABCDHistPdf.h  RooComplementCoef.h  RooExpandedFitResult.h  RooNonCentralBinning.h  RooParamHistPdf.h  RooTruncExponential.h  RooWeibull.h  Statistics.h  TMsgLogger.h
cxx/roofit/src/: ABCDUtils.cxx  DataUtils.cxx  DrawUtils.cxx  RhhNDKeysPdf.cxx  RooABCDHistPdf.cxx  RooComplementCoef.cxx  RooExpandedFitResult.cxx  RooNonCentralBinning.cxx  RooParamHistPdf.cxx  RooTruncExponential.cxx  RooWeibull.cxx  Statistics.cxx  TMsgLogger.cxx
data/: dummy.csv
docker/: README.rst
docker/eskapade-base/: Dockerfile  create_docker.sh
docker/eskapade-env/: Dockerfile  bashrc_appendum  create_docker.sh
docker/eskapade-user/: user-mapping.sh
docker/eskapade-usr/: Dockerfile  bashrc_appendum  create_docker.sh  eskapade_env.yml  kave.sh  user-mapping.sh
docs/: README.rst  autogenerate.sh
docs/images/: Eskapade_8_4_settings_flow.xml
docs/source/: MacOS.rst  code.rst  coding.rst  command_line_arguments.rst  conf.py  contributing.rst  developing.rst  eskapade.analysis.analysis_tests.rst  eskapade.analysis.links.rst  eskapade.analysis.rst  eskapade.core.core_tests.rst  eskapade.core.rst  eskapade.core_ops.core_ops_tests.rst  eskapade.core_ops.links.rst  eskapade.core_ops.rst  eskapade.data_quality.links.rst  eskapade.data_quality.rst  eskapade.data_quality.tests.integration.rst  eskapade.data_quality.tests.rst  eskapade.eskapade_tests.rst  eskapade.logger.rst  eskapade.root_analysis.decorators.rst  eskapade.root_analysis.links.rst  eskapade.root_analysis.rst  eskapade.rst  eskapade.spark_analysis.links.rst  eskapade.spark_analysis.rst  eskapade.visualization.links.rst  eskapade.visualization.rst  eskapade_index.rst  index.rst  installation.rst  introduction.rst  mac_os.rst  migration_tips.rst  misc.rst  package_structure.rst  references.rst  releasenotes.rst  spark.rst  (+7 more)
python/eskapade/: README.rst  __init__.py  _bootstrap.py  _eskapade.py  entry_points.py  exceptions.py  helpers.py  mixins.py  resources.py  utils.py  version.py
python/eskapade/analysis/: __init__.py  correlation.py  datetime.py  histogram.py  histogram_filling.py  statistics.py
python/eskapade/core/: __init__.py  definitions.py  element.py  exceptions.py  execution.py  meta.py  metas.py  mixin.py  mixins.py  persistence.py  process_manager.py  process_services.py  project_utils.py  run_elements.py  run_utils.py
python/eskapade/core_ops/: __init__.py
python/eskapade/data/: dummy.csv  dummy1.csv  dummy2.csv  messy_dtypes.csv
python/eskapade/data_mimic/: __init__.py  data_mimic_util.py  dm_vis_util.py  quantile_transformer.py
python/eskapade/data_quality/: __init__.py  dq_helper.py
python/eskapade/eskapade_tests/: __init__.py  test_case_observers.py  test_tutorial_macros.py  test_utils.py
python/eskapade/logger/: LOGGER_MOVED_TO_ESKAPADE-CORE.rst  __init__.py  _logging.py
python/eskapade/notebooks/: tutorial_1.ipynb
python/eskapade/root_analysis/: __init__.py  data_conversion.py  helpers.py  roofit_manager.py  roofit_models.py  roofit_utils.py  root_helper.py  style.py
python/eskapade/spark_analysis/: __init__.py  data_conversion.py  decorators.py  functions.py  spark_manager.py
python/eskapade/templates/: df_summary_report.tex  df_summary_report_page.tex  df_summary_table_page.tex  link_template.py  macro_template.py  notebook_template.ipynb
python/eskapade/tests/: __init__.py  test_helpers.py  test_mixins.py  test_utils.py
scripts/: collect_python_modules.sh  make_link.sh  make_macro.sh  make_notebook.sh  run_eskapade.py  run_integration_tests.py  run_tests.py  run_unit_tests.py
templates/: df_summary_report.tex  link_template.py  macro_template.py  notebook_template.ipynb
tests/: setup.py
tests/eskapade_python/: bases.py  observers.py  test_entry_points.py  test_helpers.py  test_mixins.py  test_utils.py
tutorials/: esk101_helloworld.py  esk102_multiple_chains.py  esk103_printdatastore.py  esk104_basic_datastore_operations.py  esk105_A_dont_store_results.py  esk105_B_store_each_chain.py  esk105_C_begin_at_chain3.py  esk105_datastore_pickling.py  esk106_cmdline_options.py  esk107_chain_looper.py  esk108_eventlooper.py  esk108_eventlooper.sh  esk108_map.py  esk108_reduce.py  esk109_debugging_tips.py  esk110_code_profiling.py  esk201_readdata.py  esk202_writedata.py  esk203_apply_func_to_pandas_df.py  esk204_apply_query_to_pandas_df.py  esk205_concatenate_pandas_dfs.py  esk206_merge_pandas_dfs.py  esk207_record_vectorizer.py  esk208_record_factorizer.py  esk209_read_big_data_itr.py  esk301_dfsummary_plotter.py  esk301_read_big_data_itr.py  esk301_readdata_itr.py  esk302_dfsummary_plotter.py  esk302_histogram_filler_plotter.py  esk303_hgr_filler_plotter.py  esk303_histogram_filler_plotter.py  esk303_histogrammar_fill_and_plot.py  esk304_df_boxplot.py  esk304_hgr_filler_plotter.py  esk304_histogrammar_fill_and_plot.py  esk305_correlation_summary.py  esk306_concatenate_reports.py  esk401_roothist_fill_plot_convert.py  esk402_roodatahist_fill.py  (+24 more)
vagrant/: README.rst
vagrant/dev/: Vagrantfile  mount.sh  provision.sh
vagrant/dev_image/: Vagrantfile  eskapade-dev.json  mount.sh  pip.sh
(+250 files in other folders)
